# spot

./: jepx_standard_model_seasonal.csv  jepx_standard_model_seasonal_blocked.csv  pyproject.toml
notebook/: check.ipynb  spot.ipynb  spot_2.ipynb  spot_3.ipynb  spot_summary_2015.csv
src/spot/: __init__.py
