[project]
name = "spot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "MOON-HILL\\tsuki", email = "tsukioka.business@gmail.com" }
]
dependencies = [
    "jupyter>=1.1.1",
    "pandas>=2.2.3",
    "matplotlib>=3.10.1",
    "japanize-matplotlib>=1.1.3",
    "jpholiday>=1.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/spot"]
